--- a/indice.html
+++ b/indice.html
@@ -10,8 +10,6 @@
 		<h3>Gonzalo López Luque</h3>
 		<ol>
 			<li><a href="#1">Paginas web</a></li>
-			<li><a href="#2">Directorios</a></li>
-			<li><a href="#3">Tercer enlace</a></li>
 		</ol>
 		<hr></hr>
 		<h3 id "#1">Páginas web</h3>
@@ -25,36 +23,6 @@
 			<li><a href="7videos.html">Web Videos</a></li>
 			<li><a href="8formularios.html">Web Formularios</a></li>
 			<li><a href="Gonzalo.html">Web de Gonzalo</a></li>
-		</ol>
-		<h3 id "#2">Directorios</h3>
-		<ol>
-			<li><h4>Directorio 2</h4></li>
-			<ol>
-				<li><a href="dir2/tmaños.html">Tmaños</a></li>
-			</ol>
-			<li><h4>Imagenes</h4></li>
-			<ol>
-				<li><a href="imagenes/dva.jpg">Dva</a></li>
-				<li><a href="imagenes/dvafoto.jpg">Dva foto</a></li>
-				<li><a href="imagenes/dvafoto2.jpg">Dva foto 2</a></li>
-				<li><a href="imagenes/images.jpg">Images</a></li>
-				<li><a href="imagenes/dva.jpg">Una imagen</a></li>
-				<li><a href="imagenes/dva.jpg">Una imagen</a></li>
-				<li><a href="imagenes/dva.jpg">Una imagen</a></li>
-				<li><a href="imagenes/dva.jpg">Una imagen</a></li>
-				<li><a href="imagenes/dva.jpg">Una imagen</a></li>
-			</ol>
-			<li><a href="3enlaces.html">Web Enlaces</a></li>
-			<li><a href="4imagenes.html">Web Imagenes</a></li>
-			<li><a href="5secciones.html">Web Secciones</a></li>
-			<li><a href="6tablas.html">Web Tablas</a></li>
-			<li><a href="7videos.html">Web Videos</a></li>
-			<li><a href="8formularios.html">Web Formularios</a></li>
-			<li><a href="Gonzalo.html">Web de Gonzalo</a></li>
-		</ol>
-		<a href="imagenes/dva.jpg">Una imagen</a>
-		<h3 id "#3">Tercer enlace</h3>
-		<a href="https://es.wikihow.com/hacer-una-p%C3%A1gina-web-en-HTML">¿Como hacer una pagina web?</a>
-		<hr></hr>
+			<li><a href="9html5.html">Web de html5</a></li>
 	</body>
 </html>
