quedan las tablas

--- a/TableroDeAjedrez.html
+++ b/TableroDeAjedrez.html
@@ -60,5 +60,6 @@
             <text fill="black" font-size="45" font-family="Verdana" x="50" y="86">GLL</text>
           
           </svg>
+          <embed src="3enlaces.html" type="text/html" width="100%" height="800">
     </body>
 </html>
