--- a/1tamaños.html
+++ b/1tamaños.html
@@ -3,18 +3,53 @@
 <head>
 <meta charset="utf-8" />
 <title>Ejercicio 1</title>
+<style>
+    h1{
+        color: aqua;
+    }
+    h2{
+        color: blueviolet;
+    }
+    h3{
+        color: brown;
+    }
+    h4{
+        color: goldenrod;
+    }
+    h5{
+        color: lawngreen;
+    }
+    h6{
+        color: red;
+    }
+    .linea1{
+        color: magenta;
+    }
+    .linea2{
+        color: chocolate;
+    }
+    .p1{
+        color: darkgreen;
+    }
+    .p2{
+        color: hotpink;
+    }
+    .p3{
+        color: steelblue;
+    }
+</style>
 </head>
 <body>
 <h1> Mi primera pagina </h1>
-<p> Con la siguiente etiqueta crearemos una linea</p>
-<hr></hr>
+<p class = "p1"> Con la siguiente etiqueta crearemos una linea</p>
+<hr class = "linea1"></hr>
 <h2>Mi primera pagina</h2>
 <h3>Mi primera pagina</h3>
 <h4>Mi primera pagina</h4>
 <h5>Mi primera pagina</h5>
 <h6>Mi primera pagina</h6>
-<hr></hr>
-<p> Creamos parrafos, que al finalizar saltan de linea dejando una en blanco,de esta forma</p>
-<p>Creamos otro parrafo si queremos saltar de linea sin dejar una en blanco se hace como sigue:de esta forma</p>
+<hr class = "linea2"></hr>
+<p class = "p2"> Creamos parrafos, que al finalizar saltan de linea dejando una en blanco,de esta forma</p>
+<p class = "p3">Creamos otro parrafo si queremos saltar de linea sin dejar una en blanco se hace como sigue:de esta forma</p>
 </body>
 </html>
