--- a/6tablas.html
+++ b/6tablas.html
@@ -3,25 +3,56 @@
 <head>
 	<meta charset="utf-8" />
 	<title>tablas</title>
-
+	<style>
+		body{
+			background-color: darkgray;
+		}
+		.t1{
+			background-color: darkblue;
+		}
+		.t2{
+			background-color: blueviolet;
+		}
+		.t3{
+			background-color: chartreuse;
+		}
+		.t4{
+			background-color: darkgreen;
+		}
+		.t5{
+			background-color: crimson;
+		}
+		.t6{
+			background-color: darkcyan;
+		}
+		.t7{
+			background-color: darkgoldenrod;
+		}
+		.fila1{
+			background-color: palegreen;
+		}
+		.fila2{
+			background-color: hotpink;
+		}
+	</style>
 </head>
 
 <body>
-	<table border="1" ; align = "center">
+	<table class = "t1" border="1" ; align = "center">
 		<caption><b>tabla simple</b></caption>
-		<tr> 
+		<tr class = "fila1"> 
 			<td>fila1-celda1</td>
 			<td>fila1-celda2</td>
 			<td>fila1-celda3</td>
 		</tr>
-		<tr> 
+		<tr class = "fila2"> 
 			<td>fila1-celda1</td>
 			<td>fila1-celda2</td>
 			<td>fila1-celda3</td>
 		</tr>
 	</table>
 	<p><br/></p>
-	<table border="2">
+	<table class = "t2" border="2">
 		<caption><b>tabla con cabeceras</b></caption>
 		<tr> 
 			<td>fila1-columna1</td>
@@ -35,7 +66,7 @@
 		</tr>
 	</table>
 	<p><br/></p>
-	<table border="1">
+	<table class = "t3" border="1">
 		<caption><b>tabla con celdas unidas</b></caption>
 		<tr> 
 			<td colspan="3"; align="center">celda sobre 3 columnas</td>
@@ -51,7 +82,7 @@
 		</tr>
 	</table>
 	<p><br/></p>
-	<table border="1">
+	<table class = "t4" border="1">
 		<caption><b>tabla con filas unidas</b></caption>
 		<tr> 
 			<td rowspan="2">texto sobre dos filas</td>
@@ -64,7 +95,7 @@
 		</tr>
 	</table>
 	<p><br/></p>
-	<table border="5"; cellspacing="20">
+	<table class = "t5" border="5"; cellspacing="20">
 		<caption><b>tabla con separacion entre celdas</b></caption>
 		<tr> 
 		<td>fila1-celda1</td>
@@ -78,7 +109,7 @@
 		</tr>
 	</table>
 	<p><br/></p>
-	<table border="1"; cellpadding="10">
+	<table class = "t6" border="1"; cellpadding="10">
 		<caption><b>tabla con separacion entre borde y contenido de la celda</b></caption>
 		<tr> 
 			<td>fila1-celda1</td>
@@ -92,7 +123,7 @@
 		</tr>
 	</table>
 	<p><br/></p>
-	<table border="2">
+	<table class = "t7" border="2">
 		<caption><b>tabla con cabecera, cuerpo y pie</b></caption>
 		<thead>
 		<tr> 
