--- a/CSS3.html
+++ b/CSS3.html
@@ -16,6 +16,29 @@
             .c{
                 background-image: linear-gradient(blue, green, yellow, red);;
             }
+            .d1{
+                border-radius: 25px;
+                background: red;
+                padding: 20px;
+                width: 200px;
+                height: 25px;
+            }
+            .d2{
+                border-radius: 25px;
+                background: blue;
+                padding: 20px;
+                width: 200px;
+                height: 25px;
+            }
+            .e{
+                box-shadow: 10px 10px grey;
+            }
+            .f{
+                width: 100px;
+                height: 100px;
+                background: red;
+                transition: width 2s;
+            }
         </style>
 	</head>
 	<body>
@@ -27,5 +50,39 @@
         <h2>B) Tono, saturación y luminosidad</h2>
 
         <h4 class = "c">Fray Tomas de Belanga</h4>
+        <h2>C) Gradientes</h2>
+
+        <h2 class = "d1">Gonzalo</h2>
+        <h2 class = "d2">López Luque</h2>
+        <h2>D) Esquinas redondeadas</h2>
+
+        <table class = "e" border="5"; cellspacing="20">
+            <caption><b>tabla con separacion entre celdas</b></caption>
+            <tr> 
+            <td>fila1-celda1</td>
+            <td>fila1-celda2</td>
+            <td>fila1-celda3</td>
+            </tr>
+            <tr> 
+            <td>fila2-celda1</td>
+            <td>fila2-celda2</td>
+            <td>fila2-celda3</td>
+            </tr>
+        </table>
+        <h2>E) Sombras</h2>
+
+        <table class = "f" border="1">
+            <caption><b>tabla simple</b></caption>
+            <tr class = "fila1"> 
+                <td>fila1-celda1</td>
+                <td>fila1-celda2</td>
+                <td>fila1-celda3</td>
+            </tr>
+            <tr class = "fila2"> 
+                <td>fila1-celda1</td>
+                <td>fila1-celda2</td>
+                <td>fila1-celda3</td>
+            </tr>
+        </table>
 	</body>
-</html>
+    </html>
