--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 			<li class="lis"><a href="Gonzalo.html">Web de Gonzalo</a></li>
 			<li class="lis"><a href="9html5.html">Web de html5</a></li>
 			<li class="lis"><a href="EtiquetasHTML5.html">Web de Calcular Areas</a></li>
+			<li class="lis"><a href="futbol.html">Futbol</a></li>
 		</ul>
 
 		
@@ -86,6 +87,7 @@
 			<li class="lis2"><a href="Gonzalo.html">Web de Gonzalo</a></li>
 			<li class="lis2"><a href="9html5.html">Web de html5</a></li>
 			<li class="lis2"><a href="EtiquetasHTML5.html">Web de Calcular Areas</a></li>
+			<li class="lis"><a href="futbol.html">Futbol</a></li>
 		</ul>
 
 		
