--- a/DnD/frame.html
+++ b/DnD/frame.html
@@ -31,5 +31,7 @@
         <iframe id="izquierda" name="izquierda" src="indice.html" frameborder="0"></iframe>
         <iframe id="cuerpo" name="cuerpo" src="inicio.html" frameborder="0"></iframe>
     </div>
+    <!-- Con el iframe divido la página web en tres partes: el encabezado arriba, un indice en la parte izquierda y en el espacio restante el contenido de la página web.
+     De esta forma mantengo la página web ordenada y puedo acceder al indice desde cualquier parte de la pagina -->
 </body>
 </html>
