--- a/DnD/indice.html
+++ b/DnD/indice.html
@@ -5,21 +5,47 @@
 		<title>Indice</title>
 		<style>
             body{
-                background-color: darkgoldenrod;
+                background-color: #b8a597;
+                margin-left: 0px;
             }
+            ul{
+                margin-left: 0px;
+            }
+            .lista {
+				list-style-type: none;
+                margin-top: 0;
+				padding: 0;
+				width: 100%;
+				position: fixed;
+				overflow: auto;
+				height: 100%;
+
+			}
+            .lis a {
+				display: block;
+				width: 88%;
+				color: black;
+				text-decoration: none;
+				padding: 8px 9px;
+				font-family: 'Courier New', Courier, monospace;
+			}
+			.lis a:hover {
+				background-color: #695f57;
+				color: white;
+			}
 		</style>
 	</head>
 	<body>
-        <ol>
-            <li><a href = "inicio.html" target = "cuerpo">Inicio</a></li>
-            <li><a href = "razas.html" target = "cuerpo">Razas</a></li>
-            <li>Clases</li>
-            <li>Trasfondos</li>
-            <li>Equipamiento</li>
-            <li>NPC</li>
-            <li>Enemigos</li>
-            <li>Enlaces y Videos</li>
+        <ul class = lista>
+            <li class = "lis"><a href = "inicio.html" target = "cuerpo">Inicio</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">Razas</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">Clases</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">Trasfondos</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">Equipamiento</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">NPC</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">Enemigos</a></li>
+            <li class = "lis"><a href = "razas.html" target = "cuerpo">Enlaces y Videos</a></li>
 
-        </ol>
+        </ul>
 	</body>
 </html>
