--- a/DnD/inicio.html
+++ b/DnD/inicio.html
@@ -5,11 +5,19 @@
 		<title>Inicio</title>
 		<style>
             body{
-                background-color: aqua;
+                background-color: #e6cfbd;
+				margin-left: 25px;
             }
+			p{
+				margin-bottom: 0px;
+				line-height: 1;
+			}
+			.cita{
+				margin-left: 1200px;
+			}
 		</style>
 	</head>
 	<body>
-        <h1>Esto es un inicio</h1>
+        <h1>Inicio</h1>
 	</body>
 </html>
