--- a/DnD/encabezado.html
+++ b/DnD/encabezado.html
@@ -5,11 +5,14 @@
 		<title>Encabezado</title>
 		<style>
 			body{
-				background-color: brown;
+				background-color: #161616;
+			}
+			img{
+				margin-left: 75px;
 			}
 		</style>
 	</head>
 	<body>
-        <h1>Prueba</h1>
+        <img src="ImagenesYVideos/DnD-Symbol.png" alt="DnD" width="143" height="80"/> 
 	</body>
 </html>
