--- a/DnD/razas.html
+++ b/DnD/razas.html
@@ -5,11 +5,172 @@
 		<title>Razas</title>
 		<style>
             body{
-                background-color: darkgreen;
+                background-color: #e6cfbd;
+				margin-left: 25px;
             }
+			p{
+				margin-bottom: 0px;
+				line-height: 1;
+			}
+			.cita{
+				text-align: right;
+				margin-right: 100px;
+			}
+			.t1{
+				margin: 15px;
+				border-spacing: 15px;
+			}
+			.tabla{
+				background-color: #dbc8ba;
+				padding: 1%;
+				vertical-align: top;
+			}
 		</style>
 	</head>
 	<body>
-        <h1>Esto es la pagina de las razas</h1>
+        <h1>Razas</h1>
+		<p><i>"No todas las razas inteligentes del multiverso son apropiadas para un aventurero controlado por un jugador. Los elfos, enanos, humanos y medianos son las razas a las que es más probable que pertenezca un aventurero de un grupo típico. Es menos común encontrarse dracónidos, gnomos, semielfos, semiorcos o tieflings aventureros." </i></p>
+		<p><i>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana." </i></p>
+		<p>La raza de tu personaje no solo afecta a sus puntuaciones de característica y sus atributos, sino que también te dará pistas para construir su historia. En esta página verás una descripción de algunas razas, con información que te ayudará a interpretar a un aventurero que pertenezca a ella, como puede ser su personalidad, apariencia física, peculiaridades de su sociedad y alineamientos típicos de la raza. Estos detalles son sugerencias que te serán de utilidad al pensar en tu personaje, pero los aventureros pueden desviarse considerablemente de la norma. Merece la pena meditar por qué tu personaje es diferente a otros, pues te ayudará a pensar en su trasfondo y su personalidad.</p>
+		<p class = "cita"><b>- Manual del Jugador. Dungeons & Dragons. </b></p>
+
+		<hr></hr>
+
+		<h2>Rasgos Raciales</h2>
+		<p>Cada raza incluye rasgos raciales comunes a todos los miembros de dicha raza. Las siguientes características aparecen entre los rasgos de la mayoría:</p>
+		<ul>
+            <li><b>Aumento de Puntuación de característica.</b> Toda raza aumenta las puntuaciones de característica de un personaje.</li>
+            <li><b>Edad.</b> Indica cuándo un miembro de una raza es considerado adulto, además de la esperanza de vida media de dicha raza. Esta información puede ayudarte a decidir como de viejo es tu personaje y te puede ayudar a explicar puntuaciones de característica (personajes viejos suelen tener más Sabiduría y personajes jóvenes más Destreza), añadir explicación a tu trasfondo, ser parte de tu historia, o una simple excusa para hacer tu personaje como prefieras.</li>
+            <li><b>Alineamiento.</b> La mayoría de razas tienden a ciertos alineamientos. No son restrictivos pero puede ayudar a definir cómo es tu personaje y cómo encaja en su sociedad.</li>
+            <li><b>Tamaño.</b> Los personajes de la mayoría de la razas son de tamaño Mediano (entre 1,2 y 2,5 metros), aunque hay excepciones donde son pequeños (entre 0,5 y 1,2 metros). Hay ciertas reglas que afectan de forma diferente según el tamaño.</li>
+            <li><b>Velocidad.</b> La velocidad determina cuán lejos puedes moverte a la hora de viajar y de combatir.</li>
+            <li><b>Idiomas.</b> Dependiendo de tu raza, tu personaje podrá hablar, leer y escribir ciertos idiomas (por lo general todas las razas hablan común).</li>
+            <li><b>Subrazas.</b> Algunas razas tienen subrazas. Estas subrazas poseen rasgos de la raza raíz además de algunos específicos de la subraza. Por lo general suele cambiar alguna habilidad, algún punto de característica o parte de la historia de su pueblo.</li>
+        </ul>
+
+		<hr>
+
+		<table class = "t1" align = "center">
+			<tr> 
+				<!-- Enano -->
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/enano2.jpg"> <img src="ImagenesYVideos/enano2.jpg" width="300" height="400" alt="DnD Symbol"> </a></p>
+					<h3>Enanos</h3>
+					<p>Bajos y resistentes, atrevidos y robustos, los <b>enanos</b> son conocidos por su habilidad como guerreros, mineros y trabajadores de la piedra y el metal. Están por debajo del metro y medio de altura pero son tan anchos y compactos que pueden pesar tanto o más que un humano. Su valentía y aguante tambien son comparables a los que ellos llaman "<i>gente alta</i>".</p>
+					<p>La piel de los enenos varía de color desde marrones profundos a pálidos y sonrosados. Su cabello suele ser largo (a menos que sean calvos) y suelen hacerse trenzas y adornarlo con metales. Por último, un enano no es enano sin su barba, la cual es común a todos los géneros y la llevan con orgullo.</p>
+					<ul>
+						<li><b>Mejora de característica.</b> Tu Constitución aumenta en 2.</li>
+						<li><b>Edad.</b> Los enanos alcanzan la madurez sobre los 60 años (cambia según a quien le preguntes será más o menos) y suelen vivir hasta los 350 años de media.</li>
+						<li><b>Alineamiento.</b> Suelen ser legales, lo que quiere decir que creen en los beneficios de una sociedad bien estructurada, y tienden a ser buenos, que significa que poseen un sentido del juego limpio y creen en que todo debe ser justo.</li>
+						<li><b>Tamaño.</b> Miden alrededor de 1,35 metros de altura y pesan unos 70 kilos de media. Es un tamaño mediano.</li>
+						<li><b>Velocidad.</b> La Velocidad caminando base es de 25 pies, la cuál no se reduce portando armadura pesada.</li>
+						<li><b>Visión en la Oscuridad.</b> Acostumbrados a la vida bajo tierra, los enanos pueden ver hasta a 60 pies de distancia en luz tenue como si fuera de día y en plena oscuridad como si hubiera una luz tenue. Eso sí, no son capaces de distinguir colores, solo escala de grises.</li>
+						<li><b>Resistencia Enana</b> Esta raza tiene ventaja en tiradas de salvación contra veneno y al daño de este (peores cosas se consumen en las cuevas).</li>
+						<li><b>Entrenamiento de Combate Enano.</b> Son competentes con hachas de guerra, hachas de mano, martillos de guerra y martillos ligeros.</li>
+						<li><b>Competencia con Herramientas.</b> Son competente con unas de las siguientes herramientas: herramientas de albañil, herramientas de herrero o suministros de cervecero (todos sabemos que esta ultima va ligada a la resistencia enana).</li>
+						<li><b>Afinidad con la Piedra.</b> En las prebas de Historia en relación con el origen de un trabajo en piedra los enanos son competentes y se añade dos veces su bonificador por competencia a la tirada (para más información sobre esto, consultar los manuales y a tu master).</li>
+						<li><b>Idiomas.</b> Los enanos hablan, leen y escriben común y enano. El idioma enano esta llenos de consonantes duras y sonidos guturales, lo cual se refleja cuando hablan en otro idioma.</li>
+					</ul>
+					<p>Por último los enanos cuentan con varias subrazas que cambian parte de su historia y añaden algunas características al personaje (como recomendación personal ponte siempre subraza a menos que busques algo muy concreto, ya que te dará más opciones dentro del juego), a continuación te presento dos:</p>
+					<h4>Enano de las Colinas</h4>
+					<p>Estos enano poseen sentidos agudos, una profunda intuición y una resistencia extraordinaria.</p>
+					<ul>
+						<li><b>Mejora de característica.</b> Tu Sabiduría aumenta en 1.</li>
+						<li><b>Aguante Enano.</b> Tus puntos de golpe máximos (tu vida) se incrementan en 1, y aumentan 1 más cada nivel.</li>
+					</ul>
+					<h4>Enano de las Montañas</h4>
+					<p>Un enano de montaña es fuerte y robusto, está acostumbrado a la vida difícl en terreno agreste. Pueden ser más altos y más claros de piel.</p>
+					<ul>
+						<li><b>Mejora de Característica.</b> Tu Fuerza aumenta en 2.</li>
+						<li><b>Entrenamiento con Armadura Enana.</b> Son competentes con armaduras ligeras y medias.</li>
+					</ul>
+				</td>
+
+				<!-- Elfo -->
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/elfo.jpg"> <img src="ImagenesYVideos/elfo.jpg" width="250" height="400" alt="DnD Symbol"> </a></p>
+					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<ul>
+						<li>asdasd</li>
+						<li>asfdas</li>
+						<li>sdfsdf</li>
+						<li>safsdf</li>
+						<li>fsdfsdf</li>
+						<li>asf</li>
+						<li>asfdsdaf</li>
+					</ul>
+					<p>jdfshdjf</p>
+				</td>
+			</tr>
+
+			<tr> 
+				<!-- Mediano -->
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/hobbit.jpg"> <img src="ImagenesYVideos/hobbit.jpg" width="275" height="400" alt="DnD Symbol"> </a></p>
+					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<ul>
+						<li>asdasd</li>
+						<li>asfdas</li>
+						<li>sdfsdf</li>
+						<li>safsdf</li>
+						<li>fsdfsdf</li>
+						<li>asf</li>
+						<li>asfdsdaf</li>
+					</ul>
+					<p>jdfshdjf</p>
+				</td>
+
+				<!-- Humano -->
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol"> </a></p>
+					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<ul>
+						<li>asd</li>
+						<li>asfdas</li>
+						<li>sdfsdf</li>
+						<li>safsdf</li>
+						<li>fsdfsdf</li>
+						<li>asf</li>
+						<li>asfdsdaf</li>
+					</ul>
+					<p>jdfshdjf</p>
+				</td>
+			</tr>
+
+			<tr> 
+				<!-- Dracónido -->
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol"> </a></p>
+					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<ul>
+						<li>asdasd</li>
+						<li>asfdas</li>
+						<li>sdfsdf</li>
+						<li>safsdf</li>
+						<li>fsdfsdf</li>
+						<li>asf</li>
+						<li>asfdsdaf</li>
+					</ul>
+					<p>jdfshdjf</p>
+				</td>
+
+				<!-- Tiefling -->
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol"> </a></p>
+					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<ul>
+						<li>asdasd</li>
+						<li>asfdas</li>
+						<li>sdfsdf</li>
+						<li>safsdf</li>
+						<li>fsdfsdf</li>
+						<li>asf</li>
+						<li>asfdsdaf</li>
+					</ul>
+					<p>jdfshdjf</p>
+				</td>
+			</tr>
+
+		</table>
+
+		<hr>
+
+		<p>Por último hay que resaltar que esto solo es una guía (concretamente una guía para el jugador que empieza) y que tienes que tener en cuenta que lo que hay aquí escrito es sólo una infima parte de las razas que existen en dragones y mazmorras. Te animo personalmente a que explores los manuales en busca de más razas y, si te parecen pocas, hay una gran comunidad que sube sus propias razas a reddit u otras páginas web.</p>
+		<p>Sigue explorando y conoce a todos los habitantes del mundo de Dragones y Mazmorras, y recuerda que es un juego de imaginación por lo que incluso puedes crear tu propia raza (consulta previamente con tu master, eso si).</p>
+		<p>Mis favoritas actualmente son Constructor (del manual) y Ganso (creada por la comunidad).</p>
 	</body>
 </html>
