--- a/DnD/indice.html
+++ b/DnD/indice.html
@@ -39,12 +39,12 @@
         <ul class = lista>
             <li class = "lis"><a href = "inicio.html" target = "cuerpo">Inicio</a></li>
             <li class = "lis"><a href = "razas.html" target = "cuerpo">Razas</a></li>
-            <li class = "lis"><a href = "razas.html" target = "cuerpo">Clases</a></li>
-            <li class = "lis"><a href = "razas.html" target = "cuerpo">Trasfondos</a></li>
-            <li class = "lis"><a href = "razas.html" target = "cuerpo">Equipamiento</a></li>
-            <li class = "lis"><a href = "razas.html" target = "cuerpo">NPC</a></li>
-            <li class = "lis"><a href = "razas.html" target = "cuerpo">Enemigos</a></li>
-            <li class = "lis"><a href = "razas.html" target = "cuerpo">Enlaces y Videos</a></li>
+            <li class = "lis"><a href = "clases.html" target = "cuerpo">Clases</a></li>
+            <li class = "lis"><a href = "trasfondos.html" target = "cuerpo">Trasfondos</a></li>
+            <li class = "lis"><a href = "equipamiento.html" target = "cuerpo">Equipamiento</a></li>
+            <li class = "lis"><a href = "npc.html" target = "cuerpo">NPC</a></li>
+            <li class = "lis"><a href = "enemigos.html" target = "cuerpo">Enemigos</a></li>
+            <li class = "lis"><a href = "enlaces.html" target = "cuerpo">Enlaces y Videos</a></li>
 
         </ul>
 	</body>
