--- a/DnD/razas.html
+++ b/DnD/razas.html
@@ -7,6 +7,8 @@
             body{
                 background-color: #e6cfbd;
 				margin-left: 25px;
+				margin-bottom: 50px;
+				margin-right: 10px;
             }
 			p{
 				margin-bottom: 0px;
@@ -24,6 +26,9 @@
 				background-color: #dbc8ba;
 				padding: 1%;
 				vertical-align: top;
+			}
+			.redondeado{
+				border-radius: 5%;
 			}
 		</style>
 	</head>
@@ -53,7 +58,7 @@
 		<table class = "t1" align = "center">
 			<tr> 
 				<!-- Enano -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/enano2.jpg"> <img src="ImagenesYVideos/enano2.jpg" width="300" height="400" alt="DnD Symbol"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/enano2.jpg"> <img src="ImagenesYVideos/enano2.jpg" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
 					<h3>Enanos</h3>
 					<p>Bajos y resistentes, atrevidos y robustos, los <b>enanos</b> son conocidos por su habilidad como guerreros, mineros y trabajadores de la piedra y el metal. Están por debajo del metro y medio de altura pero son tan anchos y compactos que pueden pesar tanto o más que un humano. Su valentía y aguante tambien son comparables a los que ellos llaman "<i>gente alta</i>".</p>
 					<p>La piel de los enenos varía de color desde marrones profundos a pálidos y sonrosados. Su cabello suele ser largo (a menos que sean calvos) y suelen hacerse trenzas y adornarlo con metales. Por último, un enano no es enano sin su barba, la cual es común a todos los géneros y la llevan con orgullo.</p>
@@ -86,7 +91,8 @@
 				</td>
 
 				<!-- Elfo -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/elfo.jpg"> <img src="ImagenesYVideos/elfo.jpg" width="250" height="400" alt="DnD Symbol"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/elfo.jpg"> <img src="ImagenesYVideos/elfo.jpg" width="250" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Elfos</h3>
 					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
 					<ul>
 						<li>asdasd</li>
@@ -103,7 +109,8 @@
 
 			<tr> 
 				<!-- Mediano -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/hobbit.jpg"> <img src="ImagenesYVideos/hobbit.jpg" width="275" height="400" alt="DnD Symbol"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/hobbit.jpg"> <img src="ImagenesYVideos/hobbit.jpg" width="275" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Medianos</h3>
 					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
 					<ul>
 						<li>asdasd</li>
@@ -118,7 +125,8 @@
 				</td>
 
 				<!-- Humano -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Humanos</h3>
 					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
 					<ul>
 						<li>asd</li>
@@ -135,7 +143,8 @@
 
 			<tr> 
 				<!-- Dracónido -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Dracónidos</h3>
 					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
 					<ul>
 						<li>asdasd</li>
@@ -150,7 +159,8 @@
 				</td>
 
 				<!-- Tiefling -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Tieflings</h3>
 					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
 					<ul>
 						<li>asdasd</li>
@@ -171,6 +181,6 @@
 
 		<p>Por último hay que resaltar que esto solo es una guía (concretamente una guía para el jugador que empieza) y que tienes que tener en cuenta que lo que hay aquí escrito es sólo una infima parte de las razas que existen en dragones y mazmorras. Te animo personalmente a que explores los manuales en busca de más razas y, si te parecen pocas, hay una gran comunidad que sube sus propias razas a reddit u otras páginas web.</p>
 		<p>Sigue explorando y conoce a todos los habitantes del mundo de Dragones y Mazmorras, y recuerda que es un juego de imaginación por lo que incluso puedes crear tu propia raza (consulta previamente con tu master, eso si).</p>
-		<p>Mis favoritas actualmente son Constructor (del manual) y Ganso (creada por la comunidad).</p>
+		<p>Mis favoritas actualmente son Constructo (del manual) y Ganso (creada por la comunidad).</p>
 	</body>
 </html>
