--- a/EjClase/indice.html
+++ b/EjClase/indice.html
@@ -92,9 +92,7 @@
 
 		
 		<div style="margin-left:25%;padding:1px 16px;height:1000px;">
-			<p>dsdg </p>
-			<h1>Lenguajes de marcas y sistemas de gestión de información</h1>
-			<h3>Gonzalo López Luque</h3>
+			<h1>Turismo en Ciudad de Mexico</h1>
 		</div>
 	</body>
 </html>
