--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 		<div class="flex-container">
 			<div class="enlaces">
-				<div><a href="EjClase/frame.html" >Dungeons & Dragons</a></div>
+				<div><a href="DnD/frame.html" >Dungeons & Dragons</a></div>
 				<div><a href="EjClase/indice.html">EjClase</a></div>	
 			</div>
 
